[package]
name = "enigma"
version = "0.1.0"
edition = "2021"
authors = ["Sam Myers <sam@subtlesoftware.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.3"

[dev-dependencies]
proptest = "1.0.0"
